Fix spacing and link element

--- a/classic.css
+++ b/classic.css
@@ -202,11 +202,11 @@ h1 {
 
 .statement {
     font-style: italic;
-    margin: 1.5rem 1rem;
+    margin: 2.5rem 1rem 2rem;
 }
 
 .section {
-  margin: 1rem 1rem 2rem;
+  margin: 0rem 1rem 2.5rem;
   padding-top: 0.2rem;
   border-top: 1.5px solid black;
 }
